updated burger link

--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
       text-decoration: none;
       list-style-type: none;
       overflow: hidden;
-      background-color: #7E1717;
+      background-color: #7e1717;
     }
 
     header li {
@@ -25,7 +25,7 @@
 
     header li a {
       display: block;
-      color: #ECF8F9;
+      color: #ecf8f9;
       font-size: 20px;
       text-align: center;
       padding: 20px 20px;
@@ -78,7 +78,7 @@
         </div>
 
         <div id="Burger">
-          <img src="./Ice-Cream.jpeg" class="food" />
+          <img src="./Burger.jpeg" class="food" />
           <p class="labels">Burger</p>
         </div>
 
