added smooth scrolling

--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,10 @@
     <title>Food App</title>
   </head>
   <style>
+
+html {
+  scroll-behavior: smooth;
+}
     body {
       margin: 0;
       background-color: #d7f4ff;
