re-naming the file name

--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <title>Food App</title>
   </head>
   <style>
-
-html {
-  scroll-behavior: smooth;
-}
+    html {
+      scroll-behavior: smooth;
+    }
     body {
       margin: 0;
       background-color: #d7f4ff;
@@ -77,27 +76,27 @@ html {
       <br />
       <div class="images">
         <div id="Biryani">
-          <img src="./Biryani.jpeg" class="food" />
+          <img src="./biryani.jpeg" class="food" />
           <p class="labels">Biryani</p>
         </div>
 
         <div id="Burger">
-          <img src="./Burger.jpeg" class="food" />
+          <img src="./burger.jpeg" class="food" />
           <p class="labels">Burger</p>
         </div>
 
         <div id="Cake">
-          <img src="./Cake.jpeg" class="food" />
+          <img src="./cake.jpeg" class="food" />
           <p class="labels">Cake</p>
         </div>
 
         <div id="Ice-Cream">
-          <img src="./Ice-Cream.jpeg" class="food" />
+          <img src="./ice-cream.jpeg" class="food" />
           <p class="labels">Ice-Cream</p>
         </div>
 
         <div id="Pizza">
-          <img src="./Pizza.jpeg" class="food" />
+          <img src="./pizza.jpeg" class="food" />
           <p class="labels">Pizza</p>
         </div>
       </div>
